samples/_failures_safe/1761556652_cb0000_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6975be66.c: In function ‘main’:
./samples/SAFE/__tmp_6975be66.c:159:24: error: missing terminating " character
  159 |                 printf("Invalid
      |                        ^~~~~~~~
./samples/SAFE/__tmp_6975be66.c:159:17: error: expected expression at end of input
  159 |                 printf("Invalid
      |                 ^~~~~~
./samples/SAFE/__tmp_6975be66.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6975be66.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6975be66.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6975be66.c:159:17: error: expected declaration or statement at end of input
